EMBCDFA # 1274 - Fixed the DFA UI issues - Fixed the atachment component padding - Fixed the dialog titile on the secondary applicant - Fixed the mat-card padding on clean up logs, damaged items, Occupants - Fixed spacing on damaged property address, Property damage  pre screening components. - Fixed the edit and cancel button background color

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.scss
@@ -8,12 +8,6 @@ mat-form-field {
     margin: 15px 0;
 }
 
-.primary-radio-button {
-  margin-top: 5px;
-  margin-right: 5px;
-  margin-bottom: 5px;
-}
-
 .highlight {
     font-weight: 700;
     color: #169bd5;
